--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: rgb(255, 145, 48);
-    font-family: Georgia, Cambria, sans-serif
+    /* font-family: Georgia, Cambria, sans-serif */
 }
 
 header {
@@ -80,6 +80,7 @@ footer {
     border: none;
     cursor: pointer;
     grid-row: 3;
+    margin-bottom: 80px;
 }
 .resume-button:hover {
     background-color: #0056b3;
@@ -153,6 +154,8 @@ html {
 /* section specific */
 
 #about {
+    padding: 80px 30px 0px 80px;
+    height: min-content;
     display: grid;
     gap: 0px 50px;
     width: fill-available;
@@ -165,6 +168,7 @@ html {
 }
 
 #about img {
+    align-self: end;
     width: 100%;
     grid-column: 2;
     grid-row: 1 /span 3;
@@ -180,25 +184,38 @@ html {
 
 .proj{
     background-color: white;
-    width: 400px;
-    height: 300px;
+    height: 320px;
     border-radius: 25px;
     margin: 10px 0px;
     transition: margin 0.3s ease-in-out; /* Smooth animation */
     display: flex;
     flex-direction: column;
     justify-content: end;
+    padding: 0px;
 }
 
 .proj div{
-    height: 100px;
-    width: 100%;
+    width: 400px;
+    height: 120px;
     background-color: #007bff;
     color: white;
     border-radius: 0px 0px 25px 25px;
     text-align: center;
-    text-justify: center;
-    display: block
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.proj img{
+    overflow: hidden;
+    width: 400px;
+    height: 200px;
+    border-radius: 25px 25px 0px 0px;
+}
+
+.proj p{
+    font-size: 25px;
+    padding: 20px;
 }
 
 .proj:hover {
@@ -208,4 +225,54 @@ html {
 .bio{
     font-size: 25px;
 
+}
+
+a {
+    text-decoration: none;
+}
+
+#programming_portfolio {
+    scroll-margin-top: -3px;
+}
+
+#contact {
+    justify-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: end;
+    background-color: rgb(69, 69, 69);
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    margin-bottom: 20px;
+}
+
+#contact img {
+    width: 30px;
+    height: 30px;
+    
+}
+
+#contact img:hover .bg {
+    fill: orange; /* Change to your desired hover color */
+}
+
+#contact a{
+    margin-bottom: 8px;
+}
+
+#contact a:first-child {
+    margin-bottom: 5px;
+}
+
+
+#art_site{
+    width: 380px;
+    height: auto;
+    margin-bottom: 10px;
+    justify-self: start;
+    align-self: center;
+    border-radius: 25px 25px 0px 0px;
+    
 }
