--- a/styles.css
+++ b/styles.css
@@ -35,16 +35,23 @@ header {
 nav {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
 }
 
 nav ul {
     list-style: none;
     display: flex;
+    /* width: min-content; */
     justify-content: center;
     align-self: center;
     margin: 0;
     padding: 0;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 850px) {
+    nav ul {
+        width: 350px;
+    }
 }
 
 nav ul li {
