--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,6 @@ nav ul {
     }
 }
 
-@media (max-width: 620px) {
-    /* instead of headings switch to tripple line ========= */
-}
-
 nav ul li {
     margin: 0 15px;
 }
@@ -75,8 +71,10 @@ nav ul li a:hover {
 
 /* ====== buttons ====== */
 
-.cta-button, .resume-button {
+.resume-button {
+    margin-top: 50px;
     display: inline-block;
+    align-self: center;
     padding: 10px 20px;
     color: white;
     text-decoration: none;
@@ -84,7 +82,7 @@ nav ul li a:hover {
     background-color: #007BFF;
 }
 
-.cta-button:hover, .resume-button:hover {
+.resume-button:hover {
     background-color: #0056b3;
 }
 
@@ -190,13 +188,13 @@ nav ul li a:hover {
     display: flex;
     justify-content: center;
     justify-self: center;
-    width: 450px;
+    width: 400px;
     height: auto;
 }
 
 #languages img {
-    width: auto;
-    height: 60px;
+    width: 40px;
+    height: auto;
     margin: 10px;
 }
 
@@ -384,4 +382,44 @@ footer {
     }
   }
 
+
+
+  /* #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    
+    opacity: 0;
+    transition: opacity 2s ease-in;
+  } */
+  
+  /* Initially hide the main content */
+  /* #content {
+    display: none;
+  } */
+
+  
+
+  @media (max-width: 960px) {
+    /* Reset #about to a flex container */
+    #about {
+      display: flex;
+      flex-direction: column;       /* Stack children vertically */
+      align-items: center;          /* Center children horizontally */
+      width: 100%;                  /* Occupy full available width */
+      max-width: 100%;              /* Ensure it never exceeds the screen width */
+      padding: 30px 50px 0px;           /* Adjust padding to keep it inside the viewport */
+      box-sizing: border-box;       /* Include padding in the element's total width */                 /* Optional: add spacing between flex items */
+    }
+
+    .resume-button {
+        align-self: center;
+    }
+  }
   
