--- a/styles.css
+++ b/styles.css
@@ -184,19 +184,31 @@ nav ul li a:hover {
     width: 50%;
 }
 
-#languages{
-    display: flex;
-    justify-content: center;
-    justify-self: center;
-    width: 400px;
-    height: auto;
-}
 
-#languages img {
-    width: 40px;
+#languages {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    width: 100%;
+    max-width: 100%;
+    gap: 30px;
+    align-items: center;
+  }
+  
+  #languages a {
+    display: block;
+  }
+  
+  #languages a img {
+    display: block;
+    width: 100%;
     height: auto;
-    margin: 10px;
-}
+  }
+
+  #about p{
+    font-size: 25px;
+  }
+  
 
 @media screen and (max-width: 1275px) {
     .bio_head {
@@ -209,6 +221,18 @@ nav ul li a:hover {
     }
     
 }
+
+/* @media screen and (max-width: 1111px) {
+    .bio_head {
+        grid-column: 1 / span 2;
+    }
+
+    #about img {
+        grid-column: 2;
+        grid-row: 2 / span 2;
+    }
+    
+} */
 
 /* ====== programming projects ====== */
 
@@ -423,3 +447,98 @@ footer {
     }
   }
   
+
+  @media (min-width: 960px) and (max-width: 1111px) {
+    #about p {
+      grid-column: 1 / -1;
+      grid-row: 2;
+    }
+
+    #about img {
+      grid-column: 2;
+      grid-row: 3/ span 2;
+    }
+
+    .bio{
+        grid-column: 1;
+        grid-row: 3;
+    }
+
+    .resume-button{
+        grid-column: 1;
+        grid-row: 4;
+    }
+  }
+  
+  @media (min-width: 1111px){
+    #about p,
+    .bio {
+      grid-column: 1;
+    }
+    #about a {
+      grid-column: 1;
+      grid-row: 4;
+    }
+
+    #about.bio#languages {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-auto-flow: row;
+    }
+
+
+    #languages a {
+        display: block;
+        grid-column: unset;
+        grid-row: unset;
+    }
+        
+
+    #about img {
+        grid-column: 2;
+        grid-row: 2/ span 3;
+    }
+  }
+  
+
+  .bio p{
+    margin-top: 0px;
+  }
+
+  @media (min-width: 1275px){
+    #about img {
+        grid-column: 2;
+        grid-row: 1/ span 4;
+    }
+  }
+
+  @media (max-width: 500px){
+    .proj {
+        height: 230px;
+    }
+
+    .proj div {
+        width: 300px;
+        height: 80px;
+    }
+    
+    .proj img {
+        width: 300px;
+        height: 150px;
+    }
+    
+    .proj p {
+        font-size: 16px;
+        padding: 15px;
+    }
+
+    #art_site {
+        width: 285px;
+        height: auto;
+        margin-bottom: 10px;
+        justify-self: start;
+        align-self: center;
+        border-radius: 25px 25px 0 0;
+    }
+
+  }
