--- a/styles.css
+++ b/styles.css
@@ -624,3 +624,49 @@ footer {
     }
     
 }
+
+
+/* #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  } */
+
+  /* #loader {
+    background: #000 url(assets/art_loader.gif) no-repeat center center;
+    background-size: 20%;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 9999;
+  } */
+
+
+  #loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full-screen loader */
+    width: 100%;
+    background-color: white; /* Optional */
+    z-index: 9999;
+  }
+  
+  .spinner {
+    width: auto; /* Adjust as needed */
+    height: 100px;
+    animation: spin 6s linear infinite;
+  }
+  
+  @keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+  }
+  
