--- a/gettagripz/css/ah.css
+++ b/gettagripz/css/ah.css
@@ -153,7 +153,7 @@ section{
     padding: 20px 100px;
 }
 
-.purchase-container{
+.purchase_container{
     justify-self: right;
     width: 300px;
 }
@@ -243,7 +243,7 @@ header img{
 #about {
   position: relative;
   overflow: hidden;
-  height: 1700px;
+  height: 1800px;
 }
 
 #about h2{
@@ -269,14 +269,14 @@ header img{
   top: 700px; /* Slightly below the top of .testimonials */
   left: 0;
   width: 60vw;
-  height: 1000px;
+  height: 1100px;
   background-color: black;
   z-index: 1;
 }
 
 .bottom_banner{
   width: 100%;
-  margin: 30px 0px;
+  margin: 80px 0px 30px 0px;
 }
 
 .color_cover{
@@ -299,44 +299,7 @@ header img{
   height: 100%;
 }
 
-@media screen and (max-width: 1000px) {
 
-    #about {
-      position: relative;
-      overflow: hidden;
-      height: 1600px;
-    }
-    .testimonials {
-        position: absolute;
-        top: 400px;
-        left: 10%;
-        width: 90vw;
-        height: 600px;
-        background-size: cover;
-        z-index: 2;
-    }
-
-    .product_images {
-        position: absolute;
-        top: 900px;
-        left: 0;
-        width: 90vw;
-        height: 700px;
-        background-color: black;
-        z-index: 1;
-    }
-
-    section{
-      padding: 20px 20px;
-    }
-
-    .features{
-      width: 100%;
-      height: 100%;
-    }
-
-  
-}
 
 .grip_photo{
   width: 350px;
@@ -365,7 +328,8 @@ header img{
 
 
 .tutorial_button {
-  display: inline-block;
+  display: inline;
+  justify-self: flex-start;
   background-color: transparent;
   color: orange;
   border: 1px solid orange;
@@ -377,6 +341,7 @@ header img{
   letter-spacing: 4px;
   cursor: pointer;
   border-radius: 0;
+  width: 200px;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -406,16 +371,17 @@ section h2{
 
 
 .feature_cover{
-  display: flexbox;
+  display: flex;
   flex-direction: column;
-  margin-left: 35%;
+  flex-wrap: wrap;
+  margin-left: 25%;
 }
 
 .color_cover_inner{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 400px;
+  margin-top: 380px;
   margin-left: 20%;
   width: 60%;
   color: white;
@@ -519,3 +485,66 @@ section h2{
   font-weight: bold;
 }
 
+@media screen and (max-width: 1200px) {
+
+    #about {
+      position: relative;
+      overflow: hidden;
+      height: 2500px;
+    }
+    .testimonials {
+        position: absolute;
+        top: 400px;
+        left: 10%;
+        width: 90vw;
+        height: 1000px;
+        background-size: cover;
+        z-index: 2;
+    }
+
+    .product_images {
+        position: absolute;
+        top: 1300px;
+        left: 0;
+        width: 90vw;
+        height: 1200px;
+        background-color: black;
+        z-index: 1;
+    }
+
+    section{
+      padding: 20px 20px;
+    }
+
+    .features{
+      width: 100%;
+      height: 100%;
+    }
+
+    .feature_cover{
+      margin-top: 50px;
+      margin-left: none;
+    }
+
+    header{
+      padding: 20px;
+    }
+
+    nav{
+      display: none;
+    }
+
+    .color_cover_inner{
+      margin-top: 250px;
+    }
+  
+}
+
+@media screen and (max-width: 1050px) {
+  .purchase_container{
+    justify-self: center;
+  }
+  .purchase{
+      flex-direction: column;
+  }
+}
