--- a/gettagripz/css/ah.css
+++ b/gettagripz/css/ah.css
@@ -341,7 +341,8 @@ header img{
   letter-spacing: 4px;
   cursor: pointer;
   border-radius: 0;
-  width: 200px;
+  box-sizing: border-box;
+  width: 250px;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -356,10 +357,10 @@ header img{
 }
 
 .grip_img{
-  position: relative;
-  left: -80px;
-  height: 500px;
-  margin: 30px 0px;
+  height: auto;
+  max-width: 800px;
+  width: 60%;
+  margin: 20px 0px;
 }
 
 section h2{
@@ -373,8 +374,8 @@ section h2{
 .feature_cover{
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  margin-left: 25%;
+  justify-content: center;
+  align-items: center;;
 }
 
 .color_cover_inner{
@@ -387,6 +388,11 @@ section h2{
   color: white;
 }
 
+.fc_header{
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+}
 
 
 /* ksldjfkldsajfl;kdsjflkdsjf;lsdj;lfjds;lkfasd */
@@ -421,24 +427,6 @@ section h2{
   height: 500px;
   width: auto;
 }
-
-/* .zoom-wrapper {
-  width: 100%;
-  max-width: 500px;
-  overflow: hidden;
-  position: relative;
-}
-
-.zoom-wrapper img {
-  width: 100%;
-  transition: transform 0.3s ease;
-  cursor: zoom-in;
-}
-
-.zoom-wrapper img:hover {
-  transform: scale(1.5);
-  cursor: zoom-out;
-} */
 
 .purchase-section {
   width: 300px;
@@ -485,11 +473,12 @@ section h2{
   font-weight: bold;
 }
 
+
+
 @media screen and (max-width: 1200px) {
 
     #about {
       position: relative;
-      overflow: hidden;
       height: 2500px;
     }
     .testimonials {
@@ -523,7 +512,6 @@ section h2{
 
     .feature_cover{
       margin-top: 50px;
-      margin-left: none;
     }
 
     header{
@@ -546,5 +534,40 @@ section h2{
   }
   .purchase{
       flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #about{
+    width: 100%;
+    height: auto;
+    padding: 0px;
+  }
+
+  .testimonials, .product_images, .grip_photos, .feature_cover, .color_cover_inner {
+    position: initial;
+    width: 100%;
+    height: auto;
+  }
+
+  .feature_cover {
+    margin: 30px 0px 50px;
+  }
+
+  .color_cover_inner {
+    /* display: inline;
+    margin: 30px 50px 50px; */
+    display: block;
+    margin: 30px auto 50px;
+    padding: 0 30px;
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
+  
+
+  .testimonials {
+    top: 300px;
+    left: 0;
   }
 }
