--- a/gettagripz/css/gettaStyles.css
+++ b/gettagripz/css/gettaStyles.css
@@ -428,11 +428,27 @@ section h2{
   width: auto;
 }
 
-.purchase-section {
-  width: 300px;
-  height: 400px;
-  background-color: #f3f3f3;
-  border: 1px solid #ddd;
+.at_home{
+  background-image: url(../images/at_home.png);
+}
+
+.at_gym{
+  background-image: url(../images/at_gym.png);
+}
+
+.at_crag{
+  background-image: url(../images/at_crag.png);
+}
+
+.grip_photos div{
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  font-size: 2rem;
+  font-weight: bold;
+
 }
 
 
